@@ -15,6 +15,11 @@ qsub=qsub
 #
 qstat=qstat
 
+#
+# The path to qdel. The default assumes that qdel is in PATH
+#
+qdel=qdel
+
 
 #
 # If the jobType attribute is specified, then the PBS provider
